--- a/dropinComponent.html
+++ b/dropinComponent.html
@@ -37,8 +37,6 @@
 
 import * as common from "./scripts/common.js";
 
-const ORIGIN_KEY = "pub.v2.8115054323780109.aHR0cDovL2xvY2FsaG9zdDo4MDAw.B92basPQjzeM7_TtJ2IKZoln780QtvwAiPFDEbKs7Ng";
-
 const globals = {};
 
 globals.componentInitializerOutput = `const sharedConfiguration = {
@@ -88,7 +86,7 @@ function handlePaymentMethodsCallback(data) {
 	// config options shared between components
 	const sharedConfiguration = {
 	    locale: document.querySelector("[name=shopperLocale]").value,
-	    originKey: ORIGIN_KEY,
+	    originKey: common.ORIGIN_KEY,
 	    environment: "test",
 	    paymentMethodsResponse: data.response
 	};
