--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-	<title>Adyen Python Sandbox</title>
+	<title>Adyen Sample Integrations</title>
 	<link rel="stylesheet" type="text/css" href="styles/style.css"></link>
 </head>
 
@@ -9,10 +9,10 @@
 	<h1>Integrations</h1>
 
 	<h3 class="index-header">3D Secure</h3>
-	<a class="index-link" href="3DSecure.html">3D Secure 1</a><br>
+	<a class="index-link" href="3DSecure.html">3D Secure 1 + 2 - Redirect</a><br>
 	<a class="index-link" href="3DSecure2BasicComponent.html">3D Secure 2 - Component</a><br>
-	<a class="index-link" href="3DSecure2Basic.html">3D Secure 2 - SDK</a><br>
-	<a class="index-link" href="3DSecure2AdvancedCustomSDK.html">3D Secure 2 - Pre-fetch</a><br>
+	<a class="index-link" href="3DSecure2Basic.html">3D Secure 2 - Classic</a><br>
+	<a class="index-link" href="3DSecure2AdvancedCustomSDK.html">3D Secure 2 - Classic Pre-fetch</a><br>
 
 	<h3 class="index-header">Checkout</h3>
 	<a class="index-link" href="dropinComponent.html">Drop-in Component</a><br>
@@ -20,9 +20,6 @@
 	<a class="index-link" href="SecuredFieldsSDK.html">Secured Fields - SDK</a><br>
 	<a class="index-link" href="SecuredFieldsDirect.html">Secured Fields - Direct</a><br>
 	<a class="index-link" href="components.html">Components</a><br>
-
-<!-- 	<h3 class="index-header">Adyen Wallet</h3>
-	<a class="index-link" href="walletSimulator.html">Simulator</a><br>-->	
 	
 	<h3 class="index-header">Classic API</h3>
 	<a class="index-link" href="CSE.html">Client Side Encryption (CSE)</a><br>
